# logo-toolkit

./: .gitignore  README.md  pyproject.toml
.codex/environments/: environment.toml
docs/: TEAM_USAGE.md
packaging/: build_windows.ps1  create_team_release.ps1  install_ffmpeg.ps1  logo_toolkit.spec
src/logo_toolkit/: __init__.py  app_info.py  main.py
src/logo_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/logo_toolkit/core/: __init__.py  batch_transform_processor.py  file_utils.py  image_processor.py  models.py  preset_store.py  video_backend.py  video_frame_processor.py  video_processor.py
src/logo_toolkit/tools/: __init__.py  base.py  batch_transform_tool.py  logo_tool.py  registry.py  video_frame_tool.py  video_tool.py
src/logo_toolkit/ui/: __init__.py  main_window.py  preview_canvas.py  selection_helpers.py  theme.py  video_logo_preview_canvas.py
tests/: test_batch_transform_processor.py  test_batch_transform_tool.py  test_image_processor.py  test_preset_store.py  test_video_backend.py  test_video_frame_processor.py  test_video_frame_tool.py  test_video_processor.py  test_video_tool.py
